apply light theme changes

--- a/assets/scss/_predefined.scss
+++ b/assets/scss/_predefined.scss
@@ -1,7 +1,11 @@
 // Colors
 //
 $theme: #018574;
-$text: #c6cddb;
+$text: black;
+$background: white;
+$anchor-hover: blue;
+$header-background: white;
+
 $light-grey: #494f5c;
 $dark-grey: #3B3E48;
 $highlight-grey: #7d828a;
