--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,7 +19,7 @@
 }
 
 html {
-  background: $light-grey;
+  background: $background;
   line-height: 1.6;
   letter-spacing: .06em;
   scroll-behavior: smooth;
@@ -94,7 +94,7 @@ a {
   transition-timing-function: ease-out;
 
   &:hover {
-    color: #fff;
+    color: $anchor-hover;
   }
 }
 
@@ -193,7 +193,7 @@ table {
   width: 100%;
   box-sizing: border-box;
   box-shadow: -1px -2px 3px rgba(0, 0, 0, 0.45);
-  background-color: $dark-grey;
+  background-color: $header-background;
 }
 
 .hdr-wrapper {
@@ -256,7 +256,7 @@ table {
   z-index: 1;
   box-sizing: border-box;
   box-shadow: -1px -2px 3px 0px rgba(0, 0, 0, 0.45);
-  background-color: $dark-grey;
+  background-color: $header-background;
 
   ul {
     list-style: none;
